[gd_scene load_steps=9 format=3 uid="uid://1agbvbqhayb8"]

[ext_resource type="Script" path="res://common/windows/welcome_window/welcome_window.gd" id="1_hscvo"]
[ext_resource type="Texture2D" uid="uid://bddodmw1pm42r" path="res://title_banner@0.5x.png" id="2_ked33"]
[ext_resource type="Texture2D" uid="uid://faci8gjgsxub" path="res://ui/assets/icons/file_plus.svg" id="3_myesc"]
[ext_resource type="Texture2D" uid="uid://bbw07aw88fo0p" path="res://ui/assets/icons/folder_search.svg" id="4_b8nur"]
[ext_resource type="PackedScene" uid="uid://dspmmme0jspdx" path="res://common/ui/buttons/close_button.tscn" id="5_h3u5k"]
[ext_resource type="Script" path="res://common/windows/welcome_window/recent_file_container.gd" id="5_kbbyc"]

[sub_resource type="LabelSettings" id="LabelSettings_1l82f"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7mcdy"]
font_color = Color(0.423529, 0.423529, 0.423529, 1)

[node name="WelcomeWindow" type="Window"]
auto_translate_mode = 1
transparent_bg = true
initial_position = 2
size = Vector2i(450, 297)
wrap_controls = true
transient = true
transient_to_focused = true
exclusive = true
unresizable = true
borderless = true
always_on_top = true
transparent = true
content_scale_mode = 2
content_scale_aspect = 1
script = ExtResource("1_hscvo")

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_children = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"PanelContainer_Primary_Corner20_Outline"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_type_variation = &"VBoxContainer_Medium"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("2_ked33")
expand_mode = 5
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="NewFileBtn" type="Button" parent="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "New File"
icon = ExtResource("3_myesc")

[node name="OpenFileBtn" type="Button" parent="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Open File..."
icon = ExtResource("4_b8nur")

[node name="RecentFilesContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer" node_paths=PackedStringArray("button_container")]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("5_kbbyc")
button_container = NodePath("RecentFilesButtonContainer")

[node name="RecentFilesLabel" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer/RecentFilesContainer"]
layout_mode = 2
text = "Recent files"
label_settings = SubResource("LabelSettings_1l82f")

[node name="RecentFilesButtonContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer/RecentFilesContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 3

[node name="VersionLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "v.X.X.X"
label_settings = SubResource("LabelSettings_7mcdy")

[node name="CloseButton" parent="PanelContainer" instance=ExtResource("5_h3u5k")]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[connection signal="pressed" from="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/NewFileBtn" to="." method="_on_new_file_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/OpenFileBtn" to="." method="_on_open_file_btn_pressed"]
